--- a/form_login.html
+++ b/form_login.html
@@ -43,7 +43,7 @@
 
                         <div class="form-group">
                             <button type="submit" id="login_btn">로그인</button>
-                            <button type="button" id="login_joinbtn">회원가입</button>
+                            <button type="button" id="login_joinbtn" onclick="location.href='form_join.html'">회원가입</button>
                         </div>
                         <div class="id_pw_search">
                             <a href="#" class="id-pw-search">아이디 / 비밀번호찾기</a>
