--- a/form_join.html
+++ b/form_join.html
@@ -30,23 +30,21 @@
                         <div class="form-group">
                             <label for="id">아이디</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="id" placeholder="아이디(영문포함 4~12자 이상)">
+                                <input type="text" class="form-control" id="id" placeholder="아이디(영문포함 4~12자 이상)" required>
                                 <div class="input-group-addon">
                                     <button class="join_btn">아이디중복체크</button>
                                 </div>
                             </div>
-                            <span id="msgid">*필수 사항입니다.</span>
-                            <!--아이디 중복 여부 메세지 공간-->
                         </div>
                         <div class="form-group">
                             <label for="password">비밀번호</label>
                             <input type="password" class="form-control" id="pw"
-                                placeholder="비밀번호 (영 대/소문자, 숫자조합 8~16자)">
+                                placeholder="비밀번호 (영 대/소문자, 숫자조합 8~16자)" required>
                             <span id="msgpw"></span> <!-- 비밀번호 유효성 메세지 공간-->
                         </div>
                         <div class="form-group">
                             <label for="password-confirm">비밀번호 확인</label>
-                            <input type="password" class="form-control" id="pw-confirm" placeholder="비밀번호를 확인해 주세요.">
+                            <input type="password" class="form-control" id="pw-confirm" placeholder="비밀번호를 확인해 주세요." required>
                             <span id="msgpw-c"></span> <!-- 비밀번호 확인 메세지 공간-->
                         </div>
 
@@ -67,17 +65,22 @@
                         </div>
                         
                         <div class="form-group">
-                            <input type='text' name="pwhintans">
+                            <input type='text' name="pwhintans" placeholder="비밀번호 찾기 키워드 답변" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="name">닉네임</label>
+                            <input type="name" class="form-control" id="nickname" placeholder="닉네임을 입력하세요." required>
                         </div>
 
                         <div class="form-group">
                             <label for="name">이름</label>
-                            <input type="name" class="form-control" id="name" placeholder="이름을 입력하세요.">
+                            <input type="name" class="form-control" id="name" placeholder="이름을 입력하세요." required>
                         </div>
                         <div class="form-group">
                             <label for="hp">전화번호</label>
                             <div class="input-group">
-                                <input type="tel" class="form-control" id="hp" placeholder="전화번호를 입력하세요.">
+                                <input type="tel" class="form-control" id="hp" placeholder="전화번호를 입력하세요." required>
                                 <div class="input-group-addon">
                                     <button class="join_btn">본인인증</button>
                                 </div>
