--- a/form_join.html
+++ b/form_join.html
@@ -30,7 +30,8 @@
                         <div class="form-group">
                             <label for="id">아이디</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="id" placeholder="아이디(영문포함 4~12자 이상)" required>
+                                <input type="text" class="form-control" id="id" placeholder="아이디(영문포함 4~12자 이상)"
+                                    required>
                                 <div class="input-group-addon">
                                     <button class="join_btn">아이디중복체크</button>
                                 </div>
@@ -38,13 +39,14 @@
                         </div>
                         <div class="form-group">
                             <label for="password">비밀번호</label>
-                            <input type="password" class="form-control" id="pw"
-                                placeholder="비밀번호 (영 대/소문자, 숫자조합 8~16자)" required>
+                            <input type="password" class="form-control" id="pw" placeholder="비밀번호 (영 대/소문자, 숫자조합 8~16자)"
+                                required>
                             <span id="msgpw"></span> <!-- 비밀번호 유효성 메세지 공간-->
                         </div>
                         <div class="form-group">
                             <label for="password-confirm">비밀번호 확인</label>
-                            <input type="password" class="form-control" id="pw-confirm" placeholder="비밀번호를 확인해 주세요." required>
+                            <input type="password" class="form-control" id="pw-confirm" placeholder="비밀번호를 확인해 주세요."
+                                required>
                             <span id="msgpw-c"></span> <!-- 비밀번호 확인 메세지 공간-->
                         </div>
 
@@ -63,7 +65,7 @@
                                 <option value='38'>좋아하는 음식은?</option>
                             </select>
                         </div>
-                        
+
                         <div class="form-group">
                             <input type='text' name="pwhintans" placeholder="비밀번호 찾기 키워드 답변" required>
                         </div>
@@ -77,6 +79,27 @@
                             <label for="name">이름</label>
                             <input type="name" class="form-control" id="name" placeholder="이름을 입력하세요." required>
                         </div>
+
+                        <div class="form-group">
+                            <label for="email">이메일</label>
+                            <input type="text" class="mailid">
+                            <span class="mailtext">@</span>
+                            <input type="text" class="email">
+                            <select class="mailslc">
+                                <option value="self" selected>직접입력</option>
+                                <option value="naver">naver.com</option>
+                                <option value="gm">gmail.com</option>
+                                <option value="da">daum.com</option>
+                            </select>
+                            <div class="input-group-addon">
+                                <button class="mail_btn">본인인증</button>
+                            </div>
+                        </div>
+                        
+
+
+
+
                         <div class="form-group">
                             <label for="hp">전화번호</label>
                             <div class="input-group">
