09/07 수정 (조성진)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<ul class="icons">
 						<li><a href="form_login.html"><span class="label">Login</span></a></li>
 						<li><a href="form_join.html"><span class="label">Join</span></a></li>
-						<li><a href="#"><span class="label">Mypage</span></a></li>
+						<li><a href="mypage.html"><span class="label">Mypage</span></a></li>
 						<li><a href="#"><span class="label">Logout</span></a></li>
 					</ul>
 				</header>
@@ -255,6 +255,8 @@
 						<input type="text" name="query" id="query" placeholder="Search" />
 					</form>
 				</section>
+
+				<!-- Mypage -->
 
 				<!-- Menu -->
 				<nav id="menu">
