--- a/mypage.html
+++ b/mypage.html
@@ -106,13 +106,14 @@
 					</div>
 				</div>
 
-				<br><br>
-
+				<br>
+                <br>
+                <br>
 
                 <div class="w3-content w3-container w3-margin-top">
                     <div class="w3-container w3-card-4">
                         <div class="w3-center w3-large w3-margin-top">
-                            <h3>사용자님의 마이페이지</h3>
+                            <h3>사용자님의 My Page</h3>
                             <br>
                             <br>
 
@@ -135,7 +136,7 @@
                                     <label>Phone Number</label> 
                                     <input class="w3-input" type="text" id="phone" name="phone" value="사용자님의 전화번호" required> 
                                 </p>
-                                <p class="w3-center">
+                                <p class="w3-center" id="mypage_btn">
                                     <button type="submit" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">회원정보 변경</button>
                                 </p>
                             </form>
@@ -154,7 +155,7 @@
                                     <label>Confirm</label>
                                     <input class="w3-input" type="password" id="pw2" type="password" required>
                                 </p>
-                                <p class="w3-center">
+                                <p class="w3-center" id="mypage_btn">
                                     <button type="submit" id="joinBtn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">비밀번호 변경</button>
                                 </p>
                             </form>
