--- a/form_join.html
+++ b/form_join.html
@@ -92,7 +92,7 @@
                                 <option value="da">daum.com</option>
                             </select>
                             <div class="input-group-addon">
-                                <button class="mail_btn">본인인증</button>
+                                <button class="join_btn">본인인증</button>
                             </div>
                         </div>
                         
