--- a/mypage.html
+++ b/mypage.html
@@ -166,7 +166,7 @@
                         </div>
 						<br>
 						<p class="w3-center" id="mypage_btn">
-							<button type="submit" id="joinBtn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">회원 탈퇴</button>
+							<button type="submit" id="joinBtn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round" onclick="location.href='unregister.html'">회원 탈퇴</button>
 						</p>
                     </div>
                 </div>
