--- a/unregister.html
+++ b/unregister.html
@@ -1,12 +1,281 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>잡담드림</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+	<style>
+		.logo {
+			width: 250px;
+		}
+		.cal_top{
+			text-align: center;
+			font-size: 30px;
+		}
+		.cal{
+			text-align: center;    
+		}
+		table.calendar{
+			border: 1px solid black;
+			display: inline-table;
+			text-align: left;
+		}
+		table.calendar td{
+			vertical-align: top;
+			border: 1px solid rgba(20, 50, 120, 0.6);
+			width: 100px;
+		}
+	</style>
 </head>
-<body>
-    
+
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
+
+				<!-- Header -->
+				<header id="header">
+					<a href="index.html" class="logo"><img class="logo" src="./images/logo.png"></a>
+					<ul class="icons">
+						<li><a href="form_login.html"><span class="label">Login</span></a></li>
+						<li><a href="form_join.html"><span class="label">Join</span></a></li>
+						<li><a href="#"><span class="label">Mypage</span></a></li>
+						<li><a href="#"><span class="label">Logout</span></a></li>
+					</ul>
+				</header>
+
+				<!-- floating menu -->
+				<div id="floatMenu">
+					<ul>
+						<li><a href="https://www.16personalities.com/ko">자기분석<br>MBTI</a></li>
+						<li><a href="https://www.saramin.co.kr/zf_user/">사람인</a></li>
+						<li><a href="https://www.jobkorea.co.kr/">잡코리아</a></li>
+						<li><a href="https://programmers.co.kr/">프로그래머스</a></li>
+					</ul>
+				</div>
+				<!-- //floatMenu -->
+
+				<!-- 케러셀 -->
+				<div id="demo" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<!-- 슬라이드 쇼 -->
+						<div class="carousel-item active">
+							<img class="d-block w-100" src="./images/pic01.jpg" alt="First slide">
+							<div class="carousel-caption d-none d-md-block"></div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="./images/pic02.jpg" alt="Second slide">
+						</div>
+						<div class="carousel-item">
+							<img class="d-block w-100" src="./images/pic03.jpg" alt="Third slide">
+						</div>
+						<!-- / 슬라이드 쇼 끝 -->
+
+						<!-- 왼쪽 오른쪽 화살표 버튼 -->
+						<a class="carousel-control-prev" href="#demo" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span>Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#demo" data-slide="next">
+							<span>Next</span>
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						</a>
+						<!-- / 화살표 버튼 끝 -->
+
+						<!-- 인디케이터 -->
+						<ul class="carousel-indicators">
+							<li data-target="#demo" data-slide-to="0" class="active"></li>
+							<!--0번부터시작-->
+							<li data-target="#demo" data-slide-to="1"></li>
+							<li data-target="#demo" data-slide-to="2"></li>
+						</ul> <!-- 인디케이터 끝 -->
+					</div>
+				</div>
+
+				<br>
+                <br>
+                <br>
+
+                <h4>회원 탈퇴 페이지</h4>
+                <br>
+                <br>
+                
+                <form action="/izone/users/user_delete.jsp" method="post">
+                    <p><strong>비밀번호를 입력하세요.</strong>
+                        <input type="password" id="check_pw" name="chkPw">
+                        <input type="submit" value="확인">
+                </form>
+
+			</div>
+		</div>
+
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div class="inner">
+
+				<!-- Search -->
+				<section id="search" class="alt">
+					<form method="post" action="#">
+						<input type="text" name="query" id="query" placeholder="Search" />
+					</form>
+				</section>
+
+				<!-- Mypage -->
+
+				<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li><a href="index.html">Homepage</a></li>
+						<li><a href="generic.html">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li>
+						<li>
+							<span class="opener">Submenu</span>
+							<ul>
+								<li><a href="#">Lorem Dolor</a></li>
+								<li><a href="#">Ipsum Adipiscing</a></li>
+								<li><a href="#">Tempus Magna</a></li>
+								<li><a href="#">Feugiat Veroeros</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Etiam Dolore</a></li>
+						<li><a href="#">Adipiscing</a></li>
+						<li>
+							<span class="opener">Another Submenu</span>
+							<ul>
+								<li><a href="#">Lorem Dolor</a></li>
+								<li><a href="#">Ipsum Adipiscing</a></li>
+								<li><a href="#">Tempus Magna</a></li>
+								<li><a href="#">Feugiat Veroeros</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Maximus Erat</a></li>
+						<li><a href="#">Sapien Mauris</a></li>
+						<li><a href="#">Amet Lacinia</a></li>
+					</ul>
+				</nav>
+
+				<!-- Section -->
+				<section>
+					<header class="major">
+						<h2>Ante interdum</h2>
+					</header>
+					<div class="mini-posts">
+						<article>
+							<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+						</article>
+					</div>
+					<ul class="actions">
+						<li><a href="#" class="button">More</a></li>
+					</ul>
+				</section>
+
+				<!-- Section -->
+				<section>
+					<header class="major">
+						<h2>Get in touch</h2>
+					</header>
+					<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem
+						ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
+						tempus aliquam.</p>
+					<ul class="contact">
+						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+						<li class="icon solid fa-phone">(000) 000-0000</li>
+						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
+							Nashville, TN 00000-0000</li>
+					</ul>
+				</section>
+
+				<!-- Footer -->
+				<footer id="footer">
+					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
+							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
+							UP</a>.</p>
+				</footer>
+
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="./assets/js/jquery_mini.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery.dimensions.js" type="text/javascript"></script>
+
+	<!-- scroll -->
+	<script type="text/javascript">
+		// <![CDATA[ 
+		var name = "#floatMenu";
+		var menuYloc = null;
+
+		$(document).ready(function () {
+			menuYloc = parseInt($(name).css("top").substring(0, $(name).css("top").indexOf("px")))
+			$(window).scroll(function () {
+				offset = menuYloc + $(document).scrollTop() + "px";
+				$(name).animate({
+					top: offset
+				}, {
+					duration: 400,
+					queue: false
+				});
+			});
+		});
+		// ]]>
+	</script>
+
+	<!-- carousel -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+	</script>
+	<script>
+		$('.carousel').carousel({
+			interval: 2000 //기본 5초 
+		})
+	</script>
+
+	
+
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="./assets/js/bootstrap.js"></script>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+
 </body>
+
 </html>
