--- a/mypage.html
+++ b/mypage.html
@@ -53,7 +53,7 @@
 					<ul class="icons">
 						<li><a href="form_login.html"><span class="label">Login</span></a></li>
 						<li><a href="form_join.html"><span class="label">Join</span></a></li>
-						<li><a href="#"><span class="label">Mypage</span></a></li>
+						<li><a href="mypage.html"><span class="label">Mypage</span></a></li>
 						<li><a href="#"><span class="label">Logout</span></a></li>
 					</ul>
 				</header>
@@ -136,8 +136,8 @@
                                     <label>Phone Number</label> 
                                     <input class="w3-input" type="text" id="phone" name="phone" value="사용자님의 전화번호" required> 
                                 </p>
-                                <p class="w3-center" id="mypage_btn">
-                                    <button type="submit" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">회원정보 변경</button>
+                                <p class="w3-center" >
+                                    <button type="submit" id="mypage_btn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">회원정보 변경</button>
                                 </p>
                             </form>
 						</div>
@@ -159,14 +159,14 @@
                                     <label>Confirm</label>
                                     <input class="w3-input" type="password" id="pw2" type="password" required>
                                 </p>
-                                <p class="w3-center" id="mypage_btn">
-                                    <button type="submit" id="joinBtn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">비밀번호 변경</button>
+                                <p class="w3-center">
+                                    <button type="submit"  id="mypage_btn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round">비밀번호 변경</button>
                                 </p>
                             </form>
                         </div>
 						<br>
-						<p class="w3-center" id="mypage_btn">
-							<button type="submit" id="joinBtn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round" onclick="location.href='unregister.html'">회원 탈퇴</button>
+						<p class="w3-center">
+							<button type="submit"  id="mypage_btn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round" onclick="location.href='unregister.html'">회원 탈퇴</button>
 						</p>
                     </div>
                 </div>
