--- a/form_join.html
+++ b/form_join.html
@@ -123,7 +123,7 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" class="join_fail">돌아가기</button>
+                            <button type="submit" class="join_fail" onclick="location.href='index.html'">돌아가기</button>
                             <button type="submit" class="join_success">회원가입</button>
                         </div>
 
