--- a/form_login.html
+++ b/form_login.html
@@ -46,7 +46,7 @@
                             <button type="button" id="login_joinbtn" onclick="location.href='form_join.html'">회원가입</button>
                         </div>
                         <div class="id_pw_search">
-                            <a href="#" class="id-pw-search">아이디 / 비밀번호찾기</a>
+                            <a href="idpwSearch.html" class="id-pw-search">아이디 / 비밀번호찾기</a>
                         </div>
                     </form>
                 </div>
