--- a/unregister.html
+++ b/unregister.html
@@ -143,7 +143,7 @@
                         회원탈퇴
                     </button>
 
-                    <button type="submit" id="delete_btn" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round" onclick="location.href='mypage.html'">
+                    <button type="submit" id="delete_btn2" class="w3-button w3-block w3-black w3-ripple w3-margin-top w3-round" onclick="location.href='mypage.html'">
                         돌아가기
                     </button>
                 </div>
