09/10 수정 (조성진)

--- a/idpwSearch.html
+++ b/idpwSearch.html
@@ -131,19 +131,9 @@
                                     <option value='38'>좋아하는 음식은?</option>
                                 </select>
                             </div>
-                        <div class="form-group">
-                            <label for="email">휴대전화</label>
-                            <input type="text" class="form-control" id="email" placeholder="등록된 휴대전화번호">
-                            <br>
-                            <div class="input-group-addon">
-                                <button class="idpw-btn">인증번호 전송</button>
+                            <div class="form-group">
+                                <input type='text' name="pwhintans" placeholder="비밀번호 찾기 키워드 답변" required>
                             </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="Number">인증번호</label>
-                            <input type="text" class="form-control" id="Number" placeholder="인증번호">
-                        </div>
 
                         <div class="input-group-addon">
                             <button class="idpw-btn">인증하기</button>
